fix accedentaly put jre utils code to tools.java