@@ -1,556 +1,1419 @@
-package net.kdt.pojavlaunch.utils;
+package net.kdt.pojavlaunch;
 
-import static net.kdt.pojavlaunch.Architecture.ARCH_X86;
-import static net.kdt.pojavlaunch.Architecture.is64BitsDevice;
-import static net.kdt.pojavlaunch.Tools.LOCAL_RENDERER;
-import static net.kdt.pojavlaunch.Tools.NATIVE_LIB_DIR;
-import static net.kdt.pojavlaunch.Tools.currentDisplayMetrics;
-import static net.kdt.pojavlaunch.Tools.shareLog;
-import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_DUMP_SHADERS;
-import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_VSYNC_IN_ZINK;
-import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_ZINK_PREFER_SYSTEM_DRIVER;
-import static net.kdt.pojavlaunch.prefs.LauncherPreferences.*;
+import static android.os.Build.VERSION.SDK_INT;
+import static android.os.Build.VERSION_CODES.P;
+import static net.kdt.pojavlaunch.PojavApplication.sExecutorService;
+import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_IGNORE_NOTCH;
+import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_NOTCH_SIZE;
 
-import android.app.*;
-import android.content.*;
+import android.app.Activity;
+import android.app.ActivityManager;
+import android.app.NotificationChannel;
+import android.app.NotificationManager;
+import android.app.ProgressDialog;
+import android.content.ClipData;
+import android.content.ClipboardManager;
+import android.content.Context;
+import android.content.Intent;
+import android.content.pm.PackageManager;
+import android.content.res.Configuration;
+import android.content.res.Resources;
+import android.database.Cursor;
+import android.hardware.Sensor;
+import android.hardware.SensorManager;
+import android.net.Uri;
 import android.os.Build;
-import android.system.*;
-import android.util.*;
+import android.os.Bundle;
+import android.os.Environment;
+import android.os.Handler;
+import android.os.Looper;
+import android.provider.DocumentsContract;
+import android.provider.OpenableColumns;
+import android.util.ArrayMap;
+import android.util.DisplayMetrics;
+import android.util.Log;
+import android.view.View;
+import android.view.WindowManager;
+import android.widget.EditText;
+import android.widget.TextView;
 import android.widget.Toast;
 
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
+import androidx.appcompat.app.AlertDialog;
 import androidx.appcompat.app.AppCompatActivity;
+import androidx.core.app.NotificationManagerCompat;
+import androidx.fragment.app.Fragment;
+import androidx.fragment.app.FragmentActivity;
 
-import com.oracle.dalvik.*;
-import java.io.*;
-import java.util.*;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileReader;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.List;
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.TimeZone;
-import net.kdt.pojavlaunch.*;
-import net.kdt.pojavlaunch.extra.ExtraConstants;
-import net.kdt.pojavlaunch.extra.ExtraCore;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+
+import net.kdt.pojavlaunch.lifecycle.ContextExecutor;
+import net.kdt.pojavlaunch.lifecycle.ContextExecutorTask;
 import net.kdt.pojavlaunch.lifecycle.LifecycleAwareAlertDialog;
+import net.kdt.pojavlaunch.memory.MemoryHoleFinder;
+import net.kdt.pojavlaunch.memory.SelfMapsParser;
 import net.kdt.pojavlaunch.multirt.MultiRTUtils;
 import net.kdt.pojavlaunch.multirt.Runtime;
 import net.kdt.pojavlaunch.plugins.FFmpegPlugin;
-import net.kdt.pojavlaunch.prefs.*;
 import net.kdt.pojavlaunch.prefs.LauncherPreferences;
-import org.lwjgl.glfw.*;
+import net.kdt.pojavlaunch.utils.DateUtils;
+import net.kdt.pojavlaunch.utils.DownloadUtils;
+import net.kdt.pojavlaunch.utils.FileUtils;
+import net.kdt.pojavlaunch.utils.GLInfoUtils;
+import net.kdt.pojavlaunch.utils.JREUtils;
+import net.kdt.pojavlaunch.utils.JSONUtils;
+import net.kdt.pojavlaunch.utils.MCOptionUtils;
+import net.kdt.pojavlaunch.utils.OldVersionsUtils;
+import net.kdt.pojavlaunch.value.DependentLibrary;
+import net.kdt.pojavlaunch.value.MinecraftAccount;
+import net.kdt.pojavlaunch.value.MinecraftLibraryArtifact;
+import net.kdt.pojavlaunch.value.launcherprofiles.LauncherProfiles;
+import net.kdt.pojavlaunch.value.launcherprofiles.MinecraftProfile;
 
-public class JREUtils {
-    private JREUtils() {}
+import org.apache.commons.codec.binary.Hex;
+import org.apache.commons.io.IOUtils;
+import org.lwjgl.glfw.CallbackBridge;
 
-    public static String LD_LIBRARY_PATH;
-    public static String jvmLibraryPath;
+import java.io.BufferedInputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.lang.ref.WeakReference;
+import java.lang.reflect.Field;
+import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
+import java.text.ParseException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 
-    public static String findInLdLibPath(String libName) {
-        if(Os.getenv("LD_LIBRARY_PATH")==null) {
-            try {
-                if (LD_LIBRARY_PATH != null) {
-                    Os.setenv("LD_LIBRARY_PATH", LD_LIBRARY_PATH, true);
-                }
-            }catch (ErrnoException e) {
-                e.printStackTrace();
-            }
-            return libName;
+@SuppressWarnings("IOStreamConstructor")
+public final class Tools {
+    public  static final float BYTE_TO_MB = 1024 * 1024;
+    public static final Handler MAIN_HANDLER = new Handler(Looper.getMainLooper());
+    public static String APP_NAME = "PojavLauncher";
+
+    public static final Gson GLOBAL_GSON = new GsonBuilder().setPrettyPrinting().create();
+
+    public static final String URL_HOME = "https://pojavlauncherteam.github.io";
+    public static String NATIVE_LIB_DIR;
+    public static String DIR_DATA; //Initialized later to get context
+    public static File DIR_CACHE;
+    public static String MULTIRT_HOME;
+    public static String LOCAL_RENDERER = null;
+    public static int DEVICE_ARCHITECTURE;
+    public static final String LAUNCHERPROFILES_RTPREFIX = "pojav://";
+
+    // New since 3.3.1
+    public static String DIR_ACCOUNT_NEW;
+    public static String DIR_GAME_HOME = Environment.getExternalStorageDirectory().getAbsolutePath() + "/games/PojavLauncher";
+    public static String DIR_GAME_NEW;
+
+    // New since 3.0.0
+    public static String DIRNAME_HOME_JRE = "lib";
+
+    // New since 2.4.2
+    public static String DIR_HOME_VERSION;
+    public static String DIR_HOME_LIBRARY;
+
+    public static String DIR_HOME_CRASH;
+
+    public static String ASSETS_PATH;
+    public static String OBSOLETE_RESOURCES_PATH;
+    public static String CTRLMAP_PATH;
+    public static String CTRLDEF_FILE;
+    private static RenderersList sCompatibleRenderers;
+    public static String LIBGL_GL = null;
+
+
+    private static File getPojavStorageRoot(Context ctx) {
+        if(SDK_INT >= 29) {
+            return ctx.getExternalFilesDir(null);
+        }else{
+            return new File(Environment.getExternalStorageDirectory(),"games/PojavLauncher");
         }
-        for (String libPath : Os.getenv("LD_LIBRARY_PATH").split(":")) {
-            File f = new File(libPath, libName);
-            if (f.exists() && f.isFile()) {
-                return f.getAbsolutePath();
-            }
-        }
-        return libName;
-    }
-
-    public static ArrayList<File> locateLibs(File path) {
-        ArrayList<File> returnValue = new ArrayList<>();
-        File[] list = path.listFiles();
-        if(list != null) {
-            for(File f : list) {
-                if(f.isFile() && f.getName().endsWith(".so")) {
-                    returnValue.add(f);
-                }else if(f.isDirectory()) {
-                    returnValue.addAll(locateLibs(f));
-                }
-            }
-        }
-        return returnValue;
-    }
-
-    public static void initJavaRuntime(String jreHome) {
-        dlopen(findInLdLibPath("libjli.so"));
-        if(!dlopen("libjvm.so")){
-            Log.w("DynamicLoader","Failed to load with no path, trying with full path");
-            dlopen(jvmLibraryPath+"/libjvm.so");
-        }
-        dlopen(findInLdLibPath("libverify.so"));
-        dlopen(findInLdLibPath("libjava.so"));
-        // dlopen(findInLdLibPath("libjsig.so"));
-        dlopen(findInLdLibPath("libnet.so"));
-        dlopen(findInLdLibPath("libnio.so"));
-        dlopen(findInLdLibPath("libawt.so"));
-        dlopen(findInLdLibPath("libawt_headless.so"));
-        dlopen(findInLdLibPath("libfreetype.so"));
-        dlopen(findInLdLibPath("libfontmanager.so"));
-        for(File f : locateLibs(new File(jreHome, Tools.DIRNAME_HOME_JRE))) {
-            dlopen(f.getAbsolutePath());
-        }
-        dlopen(NATIVE_LIB_DIR + "/libopenal.so");
-    }
-
-    public static void redirectAndPrintJRELog() {
-
-        Log.v("jrelog","Log starts here");
-        new Thread(new Runnable(){
-            int failTime = 0;
-            ProcessBuilder logcatPb;
-            @Override
-            public void run() {
-                try {
-                    if (logcatPb == null) {
-                        // No filtering by tag anymore as that relied on incorrect log levels set in log.h
-                        logcatPb = new ProcessBuilder().command("logcat", /* "-G", "1mb", */ "-v", "brief", "-s", "jrelog", "LIBGL", "NativeInput").redirectErrorStream(true);
-                    }
-
-                    Log.i("jrelog-logcat","Clearing logcat");
-                    new ProcessBuilder().command("logcat", "-c").redirectErrorStream(true).start();
-                    Log.i("jrelog-logcat","Starting logcat");
-                    java.lang.Process p = logcatPb.start();
-
-                    byte[] buf = new byte[1024];
-                    int len;
-                    while ((len = p.getInputStream().read(buf)) != -1) {
-                        String currStr = new String(buf, 0, len);
-                        Logger.appendToLog(currStr);
-                    }
-
-                    if (p.waitFor() != 0) {
-                        Log.e("jrelog-logcat", "Logcat exited with code " + p.exitValue());
-                        failTime++;
-                        Log.i("jrelog-logcat", (failTime <= 10 ? "Restarting logcat" : "Too many restart fails") + " (attempt " + failTime + "/10");
-                        if (failTime <= 10) {
-                            run();
-                        } else {
-                            Logger.appendToLog("ERROR: Unable to get more log.");
-                        }
-                    }
-                } catch (Throwable e) {
-                    Log.e("jrelog-logcat", "Exception on logging thread", e);
-                    Logger.appendToLog("Exception on logging thread:\n" + Log.getStackTraceString(e));
-                }
-            }
-        }).start();
-        Log.i("jrelog-logcat","Logcat thread started");
-
-    }
-
-    public static void relocateLibPath(Runtime runtime, String jreHome) {
-        String JRE_ARCHITECTURE = runtime.arch;
-        if (Architecture.archAsInt(JRE_ARCHITECTURE) == ARCH_X86){
-            JRE_ARCHITECTURE = "i386/i486/i586";
-        }
-
-        for (String arch : JRE_ARCHITECTURE.split("/")) {
-            File f = new File(jreHome, "lib/" + arch);
-            if (f.exists() && f.isDirectory()) {
-                Tools.DIRNAME_HOME_JRE = "lib/" + arch;
-            }
-        }
-
-        String libName = is64BitsDevice() ? "lib64" : "lib";
-        StringBuilder ldLibraryPath = new StringBuilder();
-        if(FFmpegPlugin.isAvailable) {
-            ldLibraryPath.append(FFmpegPlugin.libraryPath).append(":");
-        }
-        ldLibraryPath.append(jreHome)
-                .append("/").append(Tools.DIRNAME_HOME_JRE)
-                .append("/jli:").append(jreHome).append("/").append(Tools.DIRNAME_HOME_JRE)
-                .append(":");
-        ldLibraryPath.append("/system/").append(libName).append(":")
-                .append("/vendor/").append(libName).append(":")
-                .append("/vendor/").append(libName).append("/hw:")
-                .append(NATIVE_LIB_DIR);
-        LD_LIBRARY_PATH = ldLibraryPath.toString();
-    }
-
-    public static void setJavaEnvironment(Activity activity, String jreHome) throws Throwable {
-        Map<String, String> envMap = new ArrayMap<>();
-        envMap.put("POJAV_NATIVEDIR", NATIVE_LIB_DIR);
-        envMap.put("JAVA_HOME", jreHome);
-        envMap.put("HOME", Tools.DIR_GAME_HOME);
-        envMap.put("TMPDIR", Tools.DIR_CACHE.getAbsolutePath());
-        envMap.put("LIBGL_MIPMAP", "3");
-
-        if(LOCAL_RENDERER.startsWith("opengles2")) {
-            envMap.put("LIBGL_NOERROR", "1");
-            envMap.put("LIBGL_NOINTOVLHACK", "1");
-            envMap.put("LIBGL_NORMALIZE", "1");
-    }
-
-        if(PREF_DUMP_SHADERS)
-            envMap.put("LIBGL_VGPU_DUMP", "1");
-        if(PREF_VSYNC_IN_ZINK)
-            envMap.put("POJAV_VSYNC_IN_ZINK", "1");
-        if(Tools.deviceHasHangingLinker())
-            envMap.put("POJAV_EMUI_ITERATOR_MITIGATE", "1");
-
-
-        // The OPEN GL version is changed according
-        envMap.put("LIBGL_ES", (String) ExtraCore.getValue(ExtraConstants.OPEN_GL_VERSION));
-
-        envMap.put("FORCE_VSYNC", String.valueOf(LauncherPreferences.PREF_FORCE_VSYNC));
-
-        envMap.put("MESA_GLSL_CACHE_DIR", Tools.DIR_CACHE.getAbsolutePath());
-        envMap.put("force_glsl_extensions_warn", "true");
-        envMap.put("allow_higher_compat_version", "true");
-        envMap.put("allow_glsl_extension_directive_midshader", "true");
-        envMap.put("MESA_LOADER_DRIVER_OVERRIDE", "zink");
-        envMap.put("VTEST_SOCKET_NAME", new File(Tools.DIR_CACHE, ".virgl_test").getAbsolutePath());
-
-        envMap.put("LD_LIBRARY_PATH", LD_LIBRARY_PATH);
-        envMap.put("PATH", jreHome + "/bin:" + Os.getenv("PATH"));
-        if(FFmpegPlugin.isAvailable) {
-            envMap.put("POJAV_FFMPEG_PATH", FFmpegPlugin.executablePath);
-        }
-
-        if(LOCAL_RENDERER != null) {
-            envMap.put("POJAV_RENDERER", LOCAL_RENDERER);
-            if(LOCAL_RENDERER.equals("opengles3_ltw")) {
-                envMap.put("LIBGL_ES", "3");
-                envMap.put("POJAVEXEC_EGL","libltw.so"); // Use ANGLE EGL
-            }
-        }
-
-        if (LOCAL_RENDERER.equals("opengles3_mges")) {
-            envMap.put("LIBGL_ES", "3");
-            envMap.put("POJAVEXEC_EGL","libmobileglues.so");
-            envMap.put("MG_DIR_PATH", Tools.DIR_CACHE.getAbsolutePath());
-            envMap.put("MG_maxGlslCacheSize", MG_GLSL_CACHE_SIZE);
-            envMap.put("MG_enableANGLE", MG_ANGLE_OPTION);
-            envMap.put("MG_enableNoError", MG_NOERROR_OPTION);
-            envMap.put("MG_multidrawMode", MG_MULTIDRAWMODE_OPTION);
-            envMap.put("MG_enableExtGL43", MG_EXT_GL43);
-            envMap.put("MG_enableExtComputeShader", MG_EXT_CS);
-        }
-
-        if(LauncherPreferences.PREF_BIG_CORE_AFFINITY) envMap.put("POJAV_BIG_CORE_AFFINITY", "1");
-        envMap.put("AWTSTUB_WIDTH", Integer.toString(CallbackBridge.windowWidth > 0 ? CallbackBridge.windowWidth : CallbackBridge.physicalWidth));
-        envMap.put("AWTSTUB_HEIGHT", Integer.toString(CallbackBridge.windowHeight > 0 ? CallbackBridge.windowHeight : CallbackBridge.physicalHeight));
-
-        GLInfoUtils.GLInfo info = GLInfoUtils.getGlInfo();
-        if(!envMap.containsKey("LIBGL_ES") && LOCAL_RENDERER != null) {
-            int glesMajor = info.glesMajorVersion;
-            Log.i("glesDetect","GLES version detected: "+glesMajor);
-
-            if (glesMajor < 3) {
-                //fallback to 2 since it's the minimum for the entire app
-                envMap.put("LIBGL_ES","2");
-            } else if (LOCAL_RENDERER.startsWith("opengles3")) {
-                envMap.put("LIBGL_ES", LOCAL_RENDERER.replace("opengles", "").replace("_5", ""));
-            } else {
-                // TODO if can: other backends such as Vulkan.
-                // Sure, they should provide GLES 3 support.
-                envMap.put("LIBGL_ES", "3");
-            }
-        }
-
-        if(info.isAdreno() && !PREF_ZINK_PREFER_SYSTEM_DRIVER) {
-            envMap.put("POJAV_LOAD_TURNIP", "1");
-        }
-
-        readCustomEnv(envMap); // Must be last so it overrides anything the user sets for obvious reasons.
-
-        for (Map.Entry<String, String> env : envMap.entrySet()) {
-            Logger.appendToLog("Added custom env: " + env.getKey() + "=" + env.getValue());
-            try {
-                Os.setenv(env.getKey(), env.getValue(), true);
-            }catch (NullPointerException exception){
-                Log.e("JREUtils", exception.toString());
-            }
-        }
-
-        File serverFile = new File(jreHome + "/" + Tools.DIRNAME_HOME_JRE + "/server/libjvm.so");
-        jvmLibraryPath = jreHome + "/" + Tools.DIRNAME_HOME_JRE + "/" + (serverFile.exists() ? "server" : "client");
-        Log.d("DynamicLoader","Base LD_LIBRARY_PATH: "+LD_LIBRARY_PATH);
-        Log.d("DynamicLoader","Internal LD_LIBRARY_PATH: "+jvmLibraryPath+":"+LD_LIBRARY_PATH);
-        setLdLibraryPath(jvmLibraryPath+":"+LD_LIBRARY_PATH);
-
-        // return ldLibraryPath;
-    }
-
-    private static void readCustomEnv(Map<String, String> envMap) throws IOException {
-        File customEnvFile = new File(Tools.DIR_GAME_HOME, "custom_env.txt");
-        if (customEnvFile.exists() && customEnvFile.isFile()) {
-            BufferedReader reader = new BufferedReader(new FileReader(customEnvFile));
-            String line;
-            while ((line = reader.readLine()) != null) {
-                // Not use split() as only split first one
-                int index = line.indexOf("=");
-                envMap.put(line.substring(0, index), line.substring(index + 1));
-            }
-            reader.close();
-        }
-    }
-    public static void launchJavaVM(final AppCompatActivity activity, final Runtime runtime, File gameDirectory, final List<String> JVMArgs, final String userArgsString) throws Throwable {
-        String runtimeHome = MultiRTUtils.getRuntimeHome(runtime.name).getAbsolutePath();
-
-        JREUtils.relocateLibPath(runtime, runtimeHome);
-
-        setJavaEnvironment(activity, runtimeHome);
-
-        final String graphicsLib = loadGraphicsLibrary();
-        List<String> userArgs = getJavaArgs(activity, runtimeHome, userArgsString);
-
-        //Remove arguments that can interfere with the good working of the launcher
-        purgeArg(userArgs,"-Xms");
-        purgeArg(userArgs,"-Xmx");
-        purgeArg(userArgs,"-d32");
-        purgeArg(userArgs,"-d64");
-        purgeArg(userArgs, "-Xint");
-        purgeArg(userArgs, "-XX:+UseTransparentHugePages");
-        purgeArg(userArgs, "-XX:+UseLargePagesInMetaspace");
-        purgeArg(userArgs, "-XX:+UseLargePages");
-        purgeArg(userArgs, "-Dorg.lwjgl.opengl.libname");
-        // Don't let the user specify a custom Freetype library (as the user is unlikely to specify a version compiled for Android)
-        purgeArg(userArgs, "-Dorg.lwjgl.freetype.libname");
-        // Overridden by us to specify the exact number of cores that the android system has
-        purgeArg(userArgs, "-XX:ActiveProcessorCount");
-
-        //Add automatically generated args
-        userArgs.add("-Xms" + LauncherPreferences.PREF_RAM_ALLOCATION + "M");
-        userArgs.add("-Xmx" + LauncherPreferences.PREF_RAM_ALLOCATION + "M");
-        if(LOCAL_RENDERER != null) userArgs.add("-Dorg.lwjgl.opengl.libname=" + graphicsLib);
-
-        // Force LWJGL to use the Freetype library intended for it, instead of using the one
-        // that we ship with Java (since it may be older than what's needed)
-        userArgs.add("-Dorg.lwjgl.freetype.libname="+ NATIVE_LIB_DIR+"/libfreetype.so");
-
-        // Some phones are not using the right number of cores, fix that
-        userArgs.add("-XX:ActiveProcessorCount=" + java.lang.Runtime.getRuntime().availableProcessors());
-
-        userArgs.addAll(JVMArgs);
-        activity.runOnUiThread(() -> Toast.makeText(activity, activity.getString(R.string.autoram_info_msg,LauncherPreferences.PREF_RAM_ALLOCATION), Toast.LENGTH_SHORT).show());
-        System.out.println(JVMArgs);
-
-        initJavaRuntime(runtimeHome);
-        JREUtils.setupExitMethod(activity.getApplication());
-        JREUtils.initializeHooks();
-        chdir(gameDirectory == null ? Tools.DIR_GAME_NEW : gameDirectory.getAbsolutePath());
-        userArgs.add(0,"java"); //argv[0] is the program name according to C standard.
-
-        final int exitCode = VMLauncher.launchJVM(userArgs.toArray(new String[0]));
-        Logger.appendToLog("Java Exit code: " + exitCode);
-        if (exitCode != 0) {
-            LifecycleAwareAlertDialog.DialogCreator dialogCreator = (dialog, builder)->
-                    builder.setMessage(activity.getString(R.string.mcn_exit_title, exitCode))
-                    .setPositiveButton(R.string.main_share_logs, (dialogInterface, which)-> shareLog(activity));
-
-            LifecycleAwareAlertDialog.haltOnDialog(activity.getLifecycle(), activity, dialogCreator);
-        }
-        Tools.fullyExit();
     }
 
     /**
-     *  Gives an argument list filled with both the user args
-     *  and the auto-generated ones (eg. the window resolution).
-     * @param ctx The application context
-     * @return A list filled with args.
+     * Checks if the Pojav's storage root is accessible and read-writable
+     * @param context context to get the storage root if it's not set yet
+     * @return true if storage is fine, false if storage is not accessible
      */
-    public static List<String> getJavaArgs(Context ctx, String runtimeHome, String userArgumentsString) {
-        List<String> userArguments = parseJavaArguments(userArgumentsString);
-        String resolvFile;
-        resolvFile = new File(Tools.DIR_DATA,"resolv.conf").getAbsolutePath();
-
-        ArrayList<String> overridableArguments = new ArrayList<>(Arrays.asList(
-                "-Djava.home=" + runtimeHome,
-                "-Djava.io.tmpdir=" + Tools.DIR_CACHE.getAbsolutePath(),
-                "-Djna.boot.library.path=" + NATIVE_LIB_DIR,
-                "-Duser.home=" + Tools.DIR_GAME_HOME,
-                "-Duser.language=" + System.getProperty("user.language"),
-                "-Dos.name=Linux",
-                "-Dos.version=Android-" + Build.VERSION.RELEASE,
-                "-Dpojav.path.minecraft=" + Tools.DIR_GAME_NEW,
-                "-Dpojav.path.private.account=" + Tools.DIR_ACCOUNT_NEW,
-                "-Duser.timezone=" + TimeZone.getDefault().getID(),
-
-                "-Dorg.lwjgl.vulkan.libname=libvulkan.so",
-                //LWJGL 3 DEBUG FLAGS
-                //"-Dorg.lwjgl.util.Debug=true",
-                //"-Dorg.lwjgl.util.DebugFunctions=true",
-                //"-Dorg.lwjgl.util.DebugLoader=true",
-                // GLFW Stub width height
-                "-Dglfwstub.windowWidth=" + Tools.getDisplayFriendlyRes(currentDisplayMetrics.widthPixels, LauncherPreferences.PREF_SCALE_FACTOR),
-                "-Dglfwstub.windowHeight=" + Tools.getDisplayFriendlyRes(currentDisplayMetrics.heightPixels, LauncherPreferences.PREF_SCALE_FACTOR),
-                "-Dglfwstub.initEgl=false",
-                "-Dext.net.resolvPath=" +resolvFile,
-                "-Dlog4j2.formatMsgNoLookups=true", //Log4j RCE mitigation
-
-                "-Dnet.minecraft.clientmodname=" + Tools.APP_NAME,
-                "-Dfml.earlyprogresswindow=false", //Forge 1.14+ workaround
-                "-Dloader.disable_forked_guis=true",
-                "-Djdk.lang.Process.launchMechanism=FORK" // Default is POSIX_SPAWN which requires starting jspawnhelper, which doesn't work on Android
-        ));
-        if(LauncherPreferences.PREF_ARC_CAPES) {
-            overridableArguments.add("-javaagent:"+new File(Tools.DIR_DATA,"arc_dns_injector/arc_dns_injector.jar").getAbsolutePath()+"=23.95.137.176");
-        }
-        List<String> additionalArguments = new ArrayList<>();
-        for(String arg : overridableArguments) {
-            String strippedArg = arg.substring(0,arg.indexOf('='));
-            boolean add = true;
-            for(String uarg : userArguments) {
-                if(uarg.startsWith(strippedArg)) {
-                    add = false;
-                    break;
-                }
-            }
-            if(add)
-                additionalArguments.add(arg);
-            else
-                Log.i("ArgProcessor","Arg skipped: "+arg);
-        }
-
-        //Add all the arguments
-        userArguments.addAll(additionalArguments);
-        return userArguments;
+    public static boolean checkStorageRoot(Context context) {
+        File externalFilesDir = DIR_GAME_HOME  == null ? Tools.getPojavStorageRoot(context) : new File(DIR_GAME_HOME);
+        //externalFilesDir == null when the storage is not mounted if it was obtained with the context call
+        return externalFilesDir != null && Environment.getExternalStorageState(externalFilesDir).equals(Environment.MEDIA_MOUNTED);
     }
 
     /**
-     * Parse and separate java arguments in a user friendly fashion
-     * It supports multi line and absence of spaces between arguments
-     * The function also supports auto-removal of improper arguments, although it may miss some.
-     *
-     * @param args The un-parsed argument list.
-     * @return Parsed args as an ArrayList
+     * Checks if the Pojav's storage root is accessible and read-writable. If it's not, starts
+     * the MissingStorageActivity and finishes the supplied activity.
+     * @param context the Activity that checks for storage availability
+     * @return whether the storage is available or not.
      */
-    public static ArrayList<String> parseJavaArguments(String args){
-        ArrayList<String> parsedArguments = new ArrayList<>(0);
-        args = args.trim().replace(" ", "");
-        //For each prefixes, we separate args.
-        String[] separators = new String[]{"-XX:-","-XX:+", "-XX:","--", "-D", "-X", "-javaagent:", "-verbose"};
-        for(String prefix : separators){
-            while (true){
-                int start = args.indexOf(prefix);
-                if(start == -1) break;
-                //Get the end of the current argument by checking the nearest separator
-                int end = -1;
-                for(String separator: separators){
-                    int tempEnd = args.indexOf(separator, start + prefix.length());
-                    if(tempEnd == -1) continue;
-                    if(end == -1){
-                        end = tempEnd;
-                        continue;
-                    }
-                    end = Math.min(end, tempEnd);
-                }
-                //Fallback
-                if(end == -1) end = args.length();
-
-                //Extract it
-                String parsedSubString = args.substring(start, end);
-                args = args.replace(parsedSubString, "");
-
-                //Check if two args aren't bundled together by mistake
-                if(parsedSubString.indexOf('=') == parsedSubString.lastIndexOf('=')) {
-                    int arraySize = parsedArguments.size();
-                    if(arraySize > 0){
-                        String lastString = parsedArguments.get(arraySize - 1);
-                        // Looking for list elements
-                        if(lastString.charAt(lastString.length() - 1) == ',' ||
-                                parsedSubString.contains(",")){
-                            parsedArguments.set(arraySize - 1, lastString + parsedSubString);
-                            continue;
-                        }
-                    }
-                    parsedArguments.add(parsedSubString);
-                }
-                else Log.w("JAVA ARGS PARSER", "Removed improper arguments: " + parsedSubString);
-            }
+    public static boolean checkStorageInteractive(Activity context) {
+        if(!Tools.checkStorageRoot(context)) {
+            context.startActivity(new Intent(context, MissingStorageActivity.class));
+            context.finish();
+            return false;
         }
-        return parsedArguments;
+        return true;
     }
 
     /**
-     * Open the render library in accordance to the settings.
-     * It will fallback if it fails to load the library.
-     * @return The name of the loaded library
+     * Initialize context constants most necessary for launcher's early startup phase
+     * that are not dependent on user storage.
+     * All values that depend on DIR_DATA and are not dependent on DIR_GAME_HOME must
+     * be initialized here.
+     * @param ctx the context for initialization.
      */
-    public static String loadGraphicsLibrary(){
-        if(LOCAL_RENDERER == null) return null;
-        String renderLibrary;
-        switch (LOCAL_RENDERER){
-            case "opengles2":
-            case "opengles2_5":
-            case "opengles3":
-                renderLibrary = "libgl4es_114.so"; break;
-            case "vulkan_zink": renderLibrary = "libOSMesa.so"; break;
-            case "opengles3_mges": renderLibrary = "libmobileglues.so"; break;
-            case "opengles3_ltw" : renderLibrary = "libltw.so"; break;
-            default:
-                Log.w("RENDER_LIBRARY", "No renderer selected, defaulting to opengles2");
-                renderLibrary = "libgl4es_114.so";
-                break;
-        }
-
-        if (LOCAL_RENDERER.equals("opengles3_mges")) {
-            dlopen(NATIVE_LIB_DIR + "/libspirv-cross-c-shared.so");
-            dlopen(NATIVE_LIB_DIR + "/libshaderconv.so");
-        }
-        return renderLibrary;
+    public static void initEarlyConstants(Context ctx) {
+        DIR_CACHE = ctx.getCacheDir();
+        DIR_DATA = ctx.getFilesDir().getParent();
+        MULTIRT_HOME = DIR_DATA + "/runtimes";
+        DIR_ACCOUNT_NEW = DIR_DATA + "/accounts";
+        NATIVE_LIB_DIR = ctx.getApplicationInfo().nativeLibraryDir;
     }
 
     /**
-     * Remove the argument from the list, if it exists
-     * If the argument exists multiple times, they will all be removed.
-     * @param argList The argument list to purge
-     * @param argStart The argument to purge from the list.
+     * Initialize context constants that depend on user storage.
+     * Any value (in)directly dependent on DIR_GAME_HOME should be set only here.
+     * You ABSOLUTELY MUST check for storage presence using checkStorageRoot() before calling this.
      */
-    private static void purgeArg(List<String> argList, String argStart) {
-        Iterator<String> args = argList.iterator();
-        while(args.hasNext()) {
-            String arg = args.next();
-            if(arg.startsWith(argStart)) args.remove();
-        }
+    public static void initStorageConstants(Context ctx){
+        initEarlyConstants(ctx);
+        DIR_GAME_HOME = getPojavStorageRoot(ctx).getAbsolutePath();
+        DIR_GAME_NEW = DIR_GAME_HOME + "/.minecraft";
+        DIR_HOME_VERSION = DIR_GAME_NEW + "/versions";
+        DIR_HOME_LIBRARY = DIR_GAME_NEW + "/libraries";
+        DIR_HOME_CRASH = DIR_GAME_NEW + "/crash-reports";
+        ASSETS_PATH = DIR_GAME_NEW + "/assets";
+        OBSOLETE_RESOURCES_PATH = DIR_GAME_NEW + "/resources";
+        CTRLMAP_PATH = DIR_GAME_HOME + "/controlmap";
+        CTRLDEF_FILE = DIR_GAME_HOME + "/controlmap/default.json";
     }
-    private static final int EGL_OPENGL_ES_BIT = 0x0001;
-    private static final int EGL_OPENGL_ES2_BIT = 0x0004;
-    private static final int EGL_OPENGL_ES3_BIT_KHR = 0x0040;
-    @SuppressWarnings("SameParameterValue")
-    private static boolean hasExtension(String extensions, String name) {
-        int start = extensions.indexOf(name);
-        while (start >= 0) {
-            // check that we didn't find a prefix of a longer extension name
-            int end = start + name.length();
-            if (end == extensions.length() || extensions.charAt(end) == ' ') {
-                return true;
-            }
-            start = extensions.indexOf(name, end);
+
+    /**
+     * Optimization mods based on Sodium can mitigate the render distance issue. Check if Sodium
+     * or its derivative is currently installed to skip the render distance check.
+     * @param gameDir current game directory
+     * @return whether sodium or a sodium-based mod is installed
+     */
+    private static boolean hasSodium(File gameDir) {
+        File modsDir = new File(gameDir, "mods");
+        File[] mods = modsDir.listFiles(file -> file.isFile() && file.getName().endsWith(".jar"));
+        if(mods == null) return false;
+        for(File file : mods) {
+            String name = file.getName();
+            if(name.contains("sodium") ||
+                    name.contains("embeddium") ||
+                    name.contains("rubidium")) return true;
         }
         return false;
     }
 
-    public static int getDetectedVersion() {
-        return GLInfoUtils.getGlInfo().glesMajorVersion;
+    /**
+     * Initialize OpenGL and do checks to see if the GPU of the device is affected by the render
+     * distance issue.
+
+     * Currently only checks whether the user has an Adreno GPU capable of OpenGL ES 3.
+
+     * This issue is caused by a very severe limit on the amount of GL buffer names that could be allocated
+     * by the Adreno properietary GLES driver.
+
+     * @return whether the GPU is affected by the Large Thin Wrapper render distance issue on vanilla
+     */
+    private static boolean affectedByRenderDistanceIssue() {
+        GLInfoUtils.GLInfo info = GLInfoUtils.getGlInfo();
+        return info.isAdreno() && info.glesMajorVersion >= 3;
     }
-    public static native int chdir(String path);
-    public static native boolean dlopen(String libPath);
-    public static native void setLdLibraryPath(String ldLibraryPath);
-    public static native void setupBridgeWindow(Object surface);
-    public static native void releaseBridgeWindow();
-    public static native void initializeHooks();
-    public static native void setupExitMethod(Context context);
-    // Obtain AWT screen pixels to render on Android SurfaceView
-    public static native int[] renderAWTScreenFrame(/* Object canvas, int width, int height */);
-    static {
-        System.loadLibrary("exithook");
-        System.loadLibrary("pojavexec");
-        System.loadLibrary("pojavexec_awt");
+
+    private static boolean checkRenderDistance(File gamedir) {
+        if(!"opengles3_ltw".equals(Tools.LOCAL_RENDERER)) return false;
+        if(!affectedByRenderDistanceIssue()) return false;
+        if(hasSodium(gamedir)) return false;
+
+        int renderDistance;
+        try {
+            MCOptionUtils.load();
+            String renderDistanceString = MCOptionUtils.get("renderDistance");
+            renderDistance = Integer.parseInt(renderDistanceString);
+        }catch (Exception e) {
+            Log.e("Tools", "Failed to check render distance", e);
+            renderDistance = 12; // Assume Minecraft's default render distance
+        }
+        // 7 is the render distance "magic number" above which MC creates too many buffers
+        // for Adreno's OpenGL ES implementation
+        return renderDistance > 7;
+    }
+
+    public static void launchMinecraft(final AppCompatActivity activity, MinecraftAccount minecraftAccount,
+                                       MinecraftProfile minecraftProfile, String versionId, int versionJavaRequirement) throws Throwable {
+        int freeDeviceMemory = getFreeDeviceMemory(activity);
+        int localeString;
+        int freeAddressSpace = Architecture.is32BitsDevice() ? getMaxContinuousAddressSpaceSize() : -1;
+        Log.i("MemStat", "Free RAM: " + freeDeviceMemory + " Addressable: " + freeAddressSpace);
+        if(freeDeviceMemory > freeAddressSpace && freeAddressSpace != -1) {
+            freeDeviceMemory = freeAddressSpace;
+            localeString = R.string.address_memory_warning_msg;
+        } else {
+            localeString = R.string.memory_warning_msg;
+        }
+
+        if(LauncherPreferences.PREF_RAM_ALLOCATION > freeDeviceMemory) {
+            int finalDeviceMemory = freeDeviceMemory;
+            LifecycleAwareAlertDialog.DialogCreator dialogCreator = (dialog, builder) ->
+                builder.setMessage(activity.getString(localeString, finalDeviceMemory, LauncherPreferences.PREF_RAM_ALLOCATION))
+                        .setPositiveButton(android.R.string.ok, (d, w)->{});
+
+            if(LifecycleAwareAlertDialog.haltOnDialog(activity.getLifecycle(), activity, dialogCreator)) {
+                return; // If the dialog's lifecycle has ended, return without
+                // actually launching the game, thus giving us the opportunity
+                // to start after the activity is shown again
+            }
+        }
+        LauncherProfiles.load();
+        File gamedir = Tools.getGameDirPath(minecraftProfile);
+        if(checkRenderDistance(gamedir)) {
+            LifecycleAwareAlertDialog.DialogCreator dialogCreator = ((alertDialog, dialogBuilder) ->
+                    dialogBuilder.setMessage(activity.getString(R.string.ltw_render_distance_warning_msg))
+                            .setPositiveButton(android.R.string.ok, (d, w)->{}));
+            if(LifecycleAwareAlertDialog.haltOnDialog(activity.getLifecycle(), activity, dialogCreator)) {
+                return;
+            }
+            // If the code goes here, it means that the user clicked "OK". Fix the render distance.
+            try {
+                MCOptionUtils.set("renderDistance", "7");
+                MCOptionUtils.save();
+            }catch (Exception e) {
+                Log.e("Tools", "Failed to fix render distance setting", e);
+            }
+        }
+
+
+        Runtime runtime = MultiRTUtils.forceReread(Tools.pickRuntime(minecraftProfile, versionJavaRequirement));
+        JMinecraftVersionList.Version versionInfo = Tools.getVersionInfo(versionId);
+
+
+        // Pre-process specific files
+        disableSplash(gamedir);
+        String[] launchArgs = getMinecraftClientArgs(minecraftAccount, versionInfo, gamedir);
+
+        // Select the appropriate openGL version
+        OldVersionsUtils.selectOpenGlVersion(versionInfo);
+
+
+        String launchClassPath = generateLaunchClassPath(versionInfo, versionId);
+
+        List<String> javaArgList = new ArrayList<>();
+
+        javaArgList.add("-javaagent:" + DIR_GAME_HOME + "/patcher/MioLibPatcher.jar");
+        
+        getCacioJavaArgs(javaArgList, runtime.javaVersion == 8);
+
+        if (versionInfo.logging != null) {
+            String configFile = Tools.DIR_DATA + "/security/" + versionInfo.logging.client.file.id.replace("client", "log4j-rce-patch");
+            if (!new File(configFile).exists()) {
+                configFile = Tools.DIR_GAME_NEW + "/" + versionInfo.logging.client.file.id;
+            }
+            javaArgList.add("-Dlog4j.configurationFile=" + configFile);
+        }
+
+        File versionSpecificNativesDir = new File(Tools.DIR_CACHE, "natives/"+versionId);
+        if(versionSpecificNativesDir.exists()) {
+            String dirPath = versionSpecificNativesDir.getAbsolutePath();
+            javaArgList.add("-Djava.library.path="+dirPath+":"+Tools.NATIVE_LIB_DIR);
+            javaArgList.add("-Djna.boot.library.path="+dirPath);
+        }
+
+        javaArgList.addAll(Arrays.asList(getMinecraftJVMArgs(versionId, gamedir)));
+        javaArgList.add("-cp");
+        javaArgList.add(launchClassPath + ":" + getLWJGL3ClassPath());
+
+        javaArgList.add(versionInfo.mainClass);
+        javaArgList.addAll(Arrays.asList(launchArgs));
+        // ctx.appendlnToLog("full args: "+javaArgList.toString());
+        String args = LauncherPreferences.PREF_CUSTOM_JAVA_ARGS;
+        if(Tools.isValidString(minecraftProfile.javaArgs)) args = minecraftProfile.javaArgs;
+        FFmpegPlugin.discover(activity);
+        JREUtils.launchJavaVM(activity, runtime, gamedir, javaArgList, args);
+        // If we returned, this means that the JVM exit dialog has been shown and we don't need to be active anymore.
+        // We never return otherwise. The process will be killed anyway, and thus we will become inactive
+    }
+
+    public static File getGameDirPath(@NonNull MinecraftProfile minecraftProfile){
+        if(minecraftProfile.gameDir != null){
+            if(minecraftProfile.gameDir.startsWith(Tools.LAUNCHERPROFILES_RTPREFIX))
+                return new File(minecraftProfile.gameDir.replace(Tools.LAUNCHERPROFILES_RTPREFIX,Tools.DIR_GAME_HOME+"/"));
+            else
+                return new File(Tools.DIR_GAME_HOME,minecraftProfile.gameDir);
+        }
+        return new File(Tools.DIR_GAME_NEW);
+    }
+
+    public static void buildNotificationChannel(Context context){
+        if(Build.VERSION.SDK_INT < Build.VERSION_CODES.O) return;
+        NotificationChannel channel = new NotificationChannel(
+                context.getString(R.string.notif_channel_id),
+                context.getString(R.string.notif_channel_name), NotificationManager.IMPORTANCE_DEFAULT);
+        NotificationManagerCompat manager = NotificationManagerCompat.from(context);
+        manager.createNotificationChannel(channel);
+    }
+    public static void disableSplash(File dir) {
+        File configDir = new File(dir, "config");
+        if(FileUtils.ensureDirectorySilently(configDir)) {
+            File forgeSplashFile = new File(dir, "config/splash.properties");
+            String forgeSplashContent = "enabled=true";
+            try {
+                if (forgeSplashFile.exists()) {
+                    forgeSplashContent = Tools.read(forgeSplashFile.getAbsolutePath());
+                }
+                if (forgeSplashContent.contains("enabled=true")) {
+                    Tools.write(forgeSplashFile.getAbsolutePath(),
+                            forgeSplashContent.replace("enabled=true", "enabled=false"));
+                }
+            } catch (IOException e) {
+                Log.w(Tools.APP_NAME, "Could not disable Forge 1.12.2 and below splash screen!", e);
+            }
+        } else {
+            Log.w(Tools.APP_NAME, "Failed to create the configuration directory");
+        }
+    }
+
+    public static void getCacioJavaArgs(List<String> javaArgList, boolean isJava8) {
+        // Caciocavallo config AWT-enabled version
+        javaArgList.add("-Djava.awt.headless=false");
+        javaArgList.add("-Dcacio.managed.screensize=" + AWTCanvasView.AWT_CANVAS_WIDTH + "x" + AWTCanvasView.AWT_CANVAS_HEIGHT);
+        javaArgList.add("-Dcacio.font.fontmanager=sun.awt.X11FontManager");
+        javaArgList.add("-Dcacio.font.fontscaler=sun.font.FreetypeFontScaler");
+        javaArgList.add("-Dswing.defaultlaf=javax.swing.plaf.metal.MetalLookAndFeel");
+        if (isJava8) {
+            javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
+            javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
+        } else {
+            javaArgList.add("-Dawt.toolkit=com.github.caciocavallosilano.cacio.ctc.CTCToolkit");
+            javaArgList.add("-Djava.awt.graphicsenv=com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment");
+            javaArgList.add("-Djava.system.class.loader=com.github.caciocavallosilano.cacio.ctc.CTCPreloadClassLoader");
+
+            javaArgList.add("--add-exports=java.desktop/java.awt=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.java2d=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.font=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.base/sun.security.action=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.desktop/sun.font=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.desktop/sun.java2d=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
+
+            // Opens the java.net package to Arc DNS injector on Java 9+
+            javaArgList.add("--add-opens=java.base/java.net=ALL-UNNAMED");
+        }
+
+        StringBuilder cacioClasspath = new StringBuilder();
+        cacioClasspath.append("-Xbootclasspath/").append(isJava8 ? "p" : "a");
+        File cacioDir = new File(DIR_GAME_HOME + "/caciocavallo" + (isJava8 ? "" : "17"));
+        File[] cacioFiles = cacioDir.listFiles();
+        if (cacioFiles != null) {
+            for (File file : cacioFiles) {
+                if (file.getName().endsWith(".jar")) {
+                    cacioClasspath.append(":").append(file.getAbsolutePath());
+                }
+            }
+        }
+        javaArgList.add(cacioClasspath.toString());
+    }
+
+    public static String[] getMinecraftJVMArgs(String versionName, File gameDir) {
+        JMinecraftVersionList.Version versionInfo = Tools.getVersionInfo(versionName, true);
+        // Parse Forge 1.17+ additional JVM Arguments
+        if (versionInfo.inheritsFrom == null || versionInfo.arguments == null || versionInfo.arguments.jvm == null) {
+            return new String[0];
+        }
+
+        Map<String, String> varArgMap = new ArrayMap<>();
+        varArgMap.put("classpath_separator", ":");
+        varArgMap.put("library_directory", DIR_HOME_LIBRARY);
+        varArgMap.put("version_name", versionInfo.id);
+        varArgMap.put("natives_directory", Tools.NATIVE_LIB_DIR);
+
+        List<String> minecraftArgs = new ArrayList<>();
+        if (versionInfo.arguments != null) {
+            for (Object arg : versionInfo.arguments.jvm) {
+                if (arg instanceof String) {
+                    minecraftArgs.add((String) arg);
+                } //TODO: implement (?maybe?)
+            }
+        }
+        return JSONUtils.insertJSONValueList(minecraftArgs.toArray(new String[0]), varArgMap);
+    }
+
+    public static String[] getMinecraftClientArgs(MinecraftAccount profile, JMinecraftVersionList.Version versionInfo, File gameDir) {
+        String username = profile.username;
+        String versionName = versionInfo.id;
+        if (versionInfo.inheritsFrom != null) {
+            versionName = versionInfo.inheritsFrom;
+        }
+
+        String userType = "mojang";
+        try {
+            Date creationDate = DateUtils.getOriginalReleaseDate(versionInfo);
+            // Minecraft 22w43a which adds chat reporting (and signing) was released on
+            // 26th October 2022. So, if the date is not before that (meaning it is equal or higher)
+            // change the userType to MSA to fix the missing signature
+            if(creationDate != null && !DateUtils.dateBefore(creationDate, 2022, 9, 26)) {
+                userType = "msa";
+            }
+        }catch (ParseException e) {
+            Log.e("CheckForProfileKey", "Failed to determine profile creation date, using \"mojang\"", e);
+        }
+
+
+        Map<String, String> varArgMap = new ArrayMap<>();
+        varArgMap.put("auth_session", profile.accessToken); // For legacy versions of MC
+        varArgMap.put("auth_access_token", profile.accessToken);
+        varArgMap.put("auth_player_name", username);
+        varArgMap.put("auth_uuid", profile.profileId.replace("-", ""));
+        varArgMap.put("auth_xuid", profile.xuid);
+        varArgMap.put("assets_root", Tools.ASSETS_PATH);
+        varArgMap.put("assets_index_name", versionInfo.assets);
+        varArgMap.put("game_assets", Tools.ASSETS_PATH);
+        varArgMap.put("game_directory", gameDir.getAbsolutePath());
+        varArgMap.put("user_properties", "{}");
+        varArgMap.put("user_type", userType);
+        varArgMap.put("version_name", versionName);
+        varArgMap.put("version_type", versionInfo.type);
+
+        List<String> minecraftArgs = new ArrayList<>();
+        if (versionInfo.arguments != null) {
+            // Support Minecraft 1.13+
+            for (Object arg : versionInfo.arguments.game) {
+                if (arg instanceof String) {
+                    minecraftArgs.add((String) arg);
+                } //TODO: implement else clause
+            }
+        }
+
+        return JSONUtils.insertJSONValueList(
+                splitAndFilterEmpty(
+                        versionInfo.minecraftArguments == null ?
+                                fromStringArray(minecraftArgs.toArray(new String[0])):
+                                versionInfo.minecraftArguments
+                ), varArgMap
+        );
+    }
+
+    public static String fromStringArray(String[] strArr) {
+        StringBuilder builder = new StringBuilder();
+        for (int i = 0; i < strArr.length; i++) {
+            if (i > 0) builder.append(" ");
+            builder.append(strArr[i]);
+        }
+
+        return builder.toString();
+    }
+
+    private static String[] splitAndFilterEmpty(String argStr) {
+        List<String> strList = new ArrayList<>();
+        for (String arg : argStr.split(" ")) {
+            if (!arg.isEmpty()) {
+                strList.add(arg);
+            }
+        }
+        //strList.add("--fullscreen");
+        return strList.toArray(new String[0]);
+    }
+
+    public static String artifactToPath(DependentLibrary library) {
+        if (library.downloads != null &&
+            library.downloads.artifact != null &&
+            library.downloads.artifact.path != null)
+            return library.downloads.artifact.path;
+        String[] libInfos = library.name.split(":");
+        return libInfos[0].replaceAll("\\.", "/") + "/" + libInfos[1] + "/" + libInfos[2] + "/" + libInfos[1] + "-" + libInfos[2] + ".jar";
+    }
+
+    public static String getClientClasspath(String version) {
+        return DIR_HOME_VERSION + "/" + version + "/" + version + ".jar";
+    }
+
+    private static String getLWJGL3ClassPath() {
+        StringBuilder libStr = new StringBuilder();
+        File lwjgl3Folder = new File(Tools.DIR_GAME_HOME, "lwjgl3");
+        File[] lwjgl3Files = lwjgl3Folder.listFiles();
+        if (lwjgl3Files != null) {
+            for (File file: lwjgl3Files) {
+                if (file.getName().endsWith(".jar")) {
+                    libStr.append(file.getAbsolutePath()).append(":");
+                }
+            }
+        }
+        // Remove the ':' at the end
+        libStr.setLength(libStr.length() - 1);
+        return libStr.toString();
+    }
+
+    private final static boolean isClientFirst = false;
+    public static String generateLaunchClassPath(JMinecraftVersionList.Version info, String actualname) {
+        StringBuilder finalClasspath = new StringBuilder(); //versnDir + "/" + version + "/" + version + ".jar:";
+
+        String[] classpath = generateLibClasspath(info);
+
+        if (isClientFirst) {
+            finalClasspath.append(getClientClasspath(actualname));
+        }
+        for (String jarFile : classpath) {
+            if (!FileUtils.exists(jarFile)) {
+                Log.d(APP_NAME, "Ignored non-exists file: " + jarFile);
+                continue;
+            }
+            finalClasspath.append((isClientFirst ? ":" : "")).append(jarFile).append(!isClientFirst ? ":" : "");
+        }
+        if (!isClientFirst) {
+            finalClasspath.append(getClientClasspath(actualname));
+        }
+
+        return finalClasspath.toString();
+    }
+
+
+
+
+
+    public static DisplayMetrics getDisplayMetrics(Activity activity) {
+        DisplayMetrics displayMetrics = new DisplayMetrics();
+
+        if(SDK_INT >= Build.VERSION_CODES.N && (activity.isInMultiWindowMode() || activity.isInPictureInPictureMode())){
+            //For devices with free form/split screen, we need window size, not screen size.
+            displayMetrics = activity.getResources().getDisplayMetrics();
+        }else{
+            if (SDK_INT >= Build.VERSION_CODES.R) {
+                activity.getDisplay().getRealMetrics(displayMetrics);
+            } else { // Removed the clause for devices with unofficial notch support, since it also ruins all devices with virtual nav bars before P
+                activity.getWindowManager().getDefaultDisplay().getRealMetrics(displayMetrics);
+            }
+            if(!PREF_IGNORE_NOTCH){
+                //Remove notch width when it isn't ignored.
+                if(activity.getResources().getConfiguration().orientation == Configuration.ORIENTATION_PORTRAIT)
+                    displayMetrics.heightPixels -= PREF_NOTCH_SIZE;
+                else
+                    displayMetrics.widthPixels -= PREF_NOTCH_SIZE;
+            }
+        }
+        currentDisplayMetrics = displayMetrics;
+        return displayMetrics;
+    }
+
+    public static void setFullscreen(Activity activity, boolean fullscreen) {
+        final View decorView = activity.getWindow().getDecorView();
+        View.OnSystemUiVisibilityChangeListener visibilityChangeListener = visibility -> {
+            boolean multiWindowMode = SDK_INT >= 24 && activity.isInMultiWindowMode();
+            // When in multi-window mode, asking for fullscreen makes no sense (cause the launcher runs in a window)
+            // So, ignore the fullscreen setting when activity is in multi window mode
+            if(fullscreen && !multiWindowMode){
+                if ((visibility & View.SYSTEM_UI_FLAG_FULLSCREEN) == 0) {
+                    decorView.setSystemUiVisibility(View.SYSTEM_UI_FLAG_LAYOUT_STABLE
+                            | View.SYSTEM_UI_FLAG_FULLSCREEN
+                            | View.SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION
+                            | View.SYSTEM_UI_FLAG_HIDE_NAVIGATION
+                            | View.SYSTEM_UI_FLAG_IMMERSIVE_STICKY
+                            | View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN);
+                }
+            }else{
+                decorView.setSystemUiVisibility(View.SYSTEM_UI_FLAG_VISIBLE);
+            }
+
+        };
+        decorView.setOnSystemUiVisibilityChangeListener(visibilityChangeListener);
+        visibilityChangeListener.onSystemUiVisibilityChange(decorView.getSystemUiVisibility()); //call it once since the UI state may not change after the call, so the activity wont become fullscreen
+    }
+
+    public static DisplayMetrics currentDisplayMetrics;
+
+    public static void updateWindowSize(Activity activity) {
+        currentDisplayMetrics = getDisplayMetrics(activity);
+
+        View dimensionView = activity.findViewById(R.id.dimension_tracker);
+
+        if(dimensionView != null) {
+            int width = dimensionView.getWidth();
+            int height = dimensionView.getHeight();
+            if(width != 0 && height != 0) {
+                Log.i("Tools", "Using dimension_tracker for display dimensions; W="+width+" H="+height);
+                CallbackBridge.physicalWidth = width;
+                CallbackBridge.physicalHeight = height;
+                return;
+            }else{
+                Log.e("Tools","Dimension tracker detected but dimensions out of date. Please check usage.", new Exception());
+            }
+        }
+
+        CallbackBridge.physicalWidth = currentDisplayMetrics.widthPixels;
+        CallbackBridge.physicalHeight = currentDisplayMetrics.heightPixels;
+    }
+
+    public static float dpToPx(float dp) {
+        //Better hope for the currentDisplayMetrics to be good
+        return dp * currentDisplayMetrics.density;
+    }
+
+    public static float pxToDp(float px){
+        //Better hope for the currentDisplayMetrics to be good
+        return px / currentDisplayMetrics.density;
+    }
+
+    public static void copyAssetFile(Context ctx, String fileName, String output, boolean overwrite) throws IOException {
+        copyAssetFile(ctx, fileName, output, new File(fileName).getName(), overwrite);
+    }
+
+    public static void copyAssetFile(Context ctx, String fileName, String output, String outputName, boolean overwrite) throws IOException {
+        File parentFolder = new File(output);
+        FileUtils.ensureDirectory(parentFolder);
+        File destinationFile = new File(output, outputName);
+        if(!destinationFile.exists() || overwrite){
+            try(InputStream inputStream = ctx.getAssets().open(fileName)) {
+                try (OutputStream outputStream = new FileOutputStream(destinationFile)){
+                    IOUtils.copy(inputStream, outputStream);
+                }
+            }
+        }
+    }
+
+    public static String printToString(Throwable throwable) {
+        StringWriter stringWriter = new StringWriter();
+        PrintWriter printWriter = new PrintWriter(stringWriter);
+        throwable.printStackTrace(printWriter);
+        printWriter.close();
+        return stringWriter.toString();
+    }
+
+    public static void showError(Context ctx, Throwable e) {
+        showError(ctx, e, false);
+    }
+
+    public static void showError(final Context ctx, final Throwable e, final boolean exitIfOk) {
+        showError(ctx, R.string.global_error, null ,e, exitIfOk, false);
+    }
+    public static void showError(final Context ctx, final int rolledMessage, final Throwable e) {
+        showError(ctx, R.string.global_error, ctx.getString(rolledMessage), e, false, false);
+    }
+    public static void showError(final Context ctx, final String rolledMessage, final Throwable e) {
+        showError(ctx, R.string.global_error, rolledMessage, e, false, false);
+    }
+    public static void showError(final Context ctx, final String rolledMessage, final Throwable e, boolean exitIfOk) {
+        showError(ctx, R.string.global_error, rolledMessage, e, exitIfOk, false);
+    }
+    public static void showError(final Context ctx, final int titleId, final Throwable e, final boolean exitIfOk) {
+        showError(ctx, titleId, null, e, exitIfOk, false);
+    }
+
+    private static void showError(final Context ctx, final int titleId, final String rolledMessage, final Throwable e, final boolean exitIfOk, final boolean showMore) {
+        if(e instanceof ContextExecutorTask) {
+            ContextExecutor.execute((ContextExecutorTask) e);
+            return;
+        }
+        e.printStackTrace();
+
+        Runnable runnable = () -> {
+            final String errMsg = showMore ? printToString(e) : rolledMessage != null ? rolledMessage : e.getMessage();
+            AlertDialog.Builder builder = new AlertDialog.Builder(ctx)
+                    .setTitle(titleId)
+                    .setMessage(errMsg)
+                    .setPositiveButton(android.R.string.ok, (p1, p2) -> {
+                        if(exitIfOk) {
+                            if (ctx instanceof MainActivity) {
+                                fullyExit();
+                            } else if (ctx instanceof Activity) {
+                                ((Activity) ctx).finish();
+                            }
+                        }
+                    })
+                    .setNegativeButton(showMore ? R.string.error_show_less : R.string.error_show_more, (p1, p2) -> showError(ctx, titleId, rolledMessage, e, exitIfOk, !showMore))
+                    .setNeutralButton(android.R.string.copy, (p1, p2) -> {
+                        ClipboardManager mgr = (ClipboardManager) ctx.getSystemService(Context.CLIPBOARD_SERVICE);
+                        mgr.setPrimaryClip(ClipData.newPlainText("error", printToString(e)));
+                        if(exitIfOk) {
+                            if (ctx instanceof MainActivity) {
+                                fullyExit();
+                            } else {
+                                ((Activity) ctx).finish();
+                            }
+                        }
+                    })
+                    .setCancelable(!exitIfOk);
+            try {
+                builder.show();
+            } catch (Throwable th) {
+                th.printStackTrace();
+            }
+        };
+
+        if (ctx instanceof Activity) {
+            ((Activity) ctx).runOnUiThread(runnable);
+        } else {
+            runnable.run();
+        }
+    }
+
+    /**
+     * Show the error remotely in a context-aware fashion. Has generally the same behaviour as
+     * Tools.showError when in an activity, but when not in one, sends a notification that opens an
+     * activity and calls Tools.showError().
+     * NOTE: If the Throwable is a ContextExecutorTask and when not in an activity,
+     * its executeWithApplication() method will never be called.
+     * @param e the error (throwable)
+     */
+    public static void showErrorRemote(Throwable e) {
+        showErrorRemote(null, e);
+    }
+    public static void showErrorRemote(Context context, int rolledMessage, Throwable e) {
+        showErrorRemote(context.getString(rolledMessage), e);
+    }
+    public static void showErrorRemote(String rolledMessage, Throwable e) {
+        // I WILL embrace layer violations because Android's concept of layers is STUPID
+        // We live in the same process anyway, why make it any more harder with this needless
+        // abstraction?
+
+        // Add your Context-related rage here
+        ContextExecutor.execute(new ShowErrorActivity.RemoteErrorTask(e, rolledMessage));
+    }
+
+
+
+    public static void dialogOnUiThread(final Activity activity, final CharSequence title, final CharSequence message) {
+        activity.runOnUiThread(()->dialog(activity, title, message));
+    }
+
+    public static void dialog(final Context context, final CharSequence title, final CharSequence message) {
+        new AlertDialog.Builder(context)
+                .setTitle(title)
+                .setMessage(message)
+                .setPositiveButton(android.R.string.ok, null)
+                .show();
+    }
+
+    public static void openURL(Activity act, String url) {
+        Intent browserIntent = new Intent(Intent.ACTION_VIEW, Uri.parse(url));
+        act.startActivity(browserIntent);
+    }
+
+    private static boolean checkRules(JMinecraftVersionList.Arguments.ArgValue.ArgRules[] rules) {
+        if(rules == null) return true; // always allow
+        for (JMinecraftVersionList.Arguments.ArgValue.ArgRules rule : rules) {
+            if (rule.action.equals("allow") && rule.os != null && rule.os.name.equals("osx")) {
+                return false; //disallow
+            }
+        }
+        return true; // allow if none match
+    }
+
+    public static void preProcessLibraries(DependentLibrary[] libraries) {
+        for (int i = 0; i < libraries.length; i++) {
+            DependentLibrary libItem = libraries[i];
+            String[] version = libItem.name.split(":")[2].split("\\.");
+            if (libItem.name.startsWith("net.java.dev.jna:jna:")) {
+                // Special handling for LabyMod 1.8.9, Forge 1.12.2(?) and oshi
+                // we have libjnidispatch 5.13.0 in jniLibs directory
+                if (Integer.parseInt(version[0]) >= 5 && Integer.parseInt(version[1]) >= 13) continue;
+                Log.d(APP_NAME, "Library " + libItem.name + " has been changed to version 5.13.0");
+                createLibraryInfo(libItem);
+                libItem.name = "net.java.dev.jna:jna:5.13.0";
+                libItem.downloads.artifact.path = "net/java/dev/jna/jna/5.13.0/jna-5.13.0.jar";
+                libItem.downloads.artifact.sha1 = "1200e7ebeedbe0d10062093f32925a912020e747";
+                libItem.downloads.artifact.url = "https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.13.0/jna-5.13.0.jar";
+            } else if (libItem.name.startsWith("com.github.oshi:oshi-core:")) {
+                //if (Integer.parseInt(version[0]) >= 6 && Integer.parseInt(version[1]) >= 3) return;
+                // FIXME: ensure compatibility
+
+                if (Integer.parseInt(version[0]) != 6 || Integer.parseInt(version[1]) != 2) continue;
+                Log.d(APP_NAME, "Library " + libItem.name + " has been changed to version 6.3.0");
+                createLibraryInfo(libItem);
+                libItem.name = "com.github.oshi:oshi-core:6.3.0";
+                libItem.downloads.artifact.path = "com/github/oshi/oshi-core/6.3.0/oshi-core-6.3.0.jar";
+                libItem.downloads.artifact.sha1 = "9e98cf55be371cafdb9c70c35d04ec2a8c2b42ac";
+                libItem.downloads.artifact.url = "https://repo1.maven.org/maven2/com/github/oshi/oshi-core/6.3.0/oshi-core-6.3.0.jar";
+            } else if (libItem.name.startsWith("org.ow2.asm:asm-all:")) {
+                // Early versions of the ASM library get repalced with 5.0.4 because Pojav's LWJGL is compiled for
+                // Java 8, which is not supported by old ASM versions. Mod loaders like Forge, which depend on this
+                // library, often include lwjgl in their class transformations, which causes errors with old ASM versions.
+                if(Integer.parseInt(version[0]) >= 5) continue;
+                Log.d(APP_NAME, "Library " + libItem.name + " has been changed to version 5.0.4");
+                createLibraryInfo(libItem);
+                libItem.name = "org.ow2.asm:asm-all:5.0.4";
+                libItem.url = null;
+                libItem.downloads.artifact.path = "org/ow2/asm/asm-all/5.0.4/asm-all-5.0.4.jar";
+                libItem.downloads.artifact.sha1 = "e6244859997b3d4237a552669279780876228909";
+                libItem.downloads.artifact.url = "https://repo1.maven.org/maven2/org/ow2/asm/asm-all/5.0.4/asm-all-5.0.4.jar";
+            }
+        }
+    }
+
+    private static void createLibraryInfo(DependentLibrary library) {
+        if(library.downloads == null || library.downloads.artifact == null)
+            library.downloads = new DependentLibrary.LibraryDownloads(new MinecraftLibraryArtifact());
+    }
+
+    public static String[] generateLibClasspath(JMinecraftVersionList.Version info) {
+        List<String> libDir = new ArrayList<>();
+        for (DependentLibrary libItem: info.libraries) {
+            if(!checkRules(libItem.rules)) continue;
+            libDir.add(Tools.DIR_HOME_LIBRARY + "/" + artifactToPath(libItem));
+        }
+        return libDir.toArray(new String[0]);
+    }
+
+    public static JMinecraftVersionList.Version getVersionInfo(String versionName) {
+        return getVersionInfo(versionName, false);
+    }
+
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    public static JMinecraftVersionList.Version getVersionInfo(String versionName, boolean skipInheriting) {
+        try {
+            JMinecraftVersionList.Version customVer = Tools.GLOBAL_GSON.fromJson(read(DIR_HOME_VERSION + "/" + versionName + "/" + versionName + ".json"), JMinecraftVersionList.Version.class);
+            if (skipInheriting || customVer.inheritsFrom == null || customVer.inheritsFrom.equals(customVer.id)) {
+                preProcessLibraries(customVer.libraries);
+            } else {
+                JMinecraftVersionList.Version inheritsVer;
+                //If it won't download, just search for it
+                try{
+                    inheritsVer = Tools.GLOBAL_GSON.fromJson(read(DIR_HOME_VERSION + "/" + customVer.inheritsFrom + "/" + customVer.inheritsFrom + ".json"), JMinecraftVersionList.Version.class);
+                }catch(IOException e) {
+                    throw new RuntimeException("Can't find the source version for "+ versionName +" (req version="+customVer.inheritsFrom+")");
+                }
+                //inheritsVer.inheritsFrom = inheritsVer.id;
+                insertSafety(inheritsVer, customVer,
+                        "assetIndex", "assets", "id",
+                        "mainClass", "minecraftArguments",
+                        "releaseTime", "time", "type"
+                );
+
+                // Go through the libraries, remove the ones overridden by the custom version
+                List<DependentLibrary> inheritLibraryList = new ArrayList<>(Arrays.asList(inheritsVer.libraries));
+                outer_loop:
+                for(DependentLibrary library : customVer.libraries){
+                    // Clean libraries overridden by the custom version
+                    String libName = library.name.substring(0, library.name.lastIndexOf(":"));
+
+                    for(DependentLibrary inheritLibrary : inheritLibraryList) {
+                        String inheritLibName = inheritLibrary.name.substring(0, inheritLibrary.name.lastIndexOf(":"));
+
+                        if(libName.equals(inheritLibName)){
+                            Log.d(APP_NAME, "Library " + libName + ": Replaced version " +
+                                    libName.substring(libName.lastIndexOf(":") + 1) + " with " +
+                                    inheritLibName.substring(inheritLibName.lastIndexOf(":") + 1));
+
+                            // Remove the library , superseded by the overriding libs
+                            inheritLibraryList.remove(inheritLibrary);
+                            continue outer_loop;
+                        }
+                    }
+                }
+
+                // Fuse libraries
+                inheritLibraryList.addAll(Arrays.asList(customVer.libraries));
+                inheritsVer.libraries = inheritLibraryList.toArray(new DependentLibrary[0]);
+                preProcessLibraries(inheritsVer.libraries);
+
+
+                // Inheriting Minecraft 1.13+ with append custom args
+                if (inheritsVer.arguments != null && customVer.arguments != null) {
+                    List totalArgList = new ArrayList(Arrays.asList(inheritsVer.arguments.game));
+
+                    int nskip = 0;
+                    for (int i = 0; i < customVer.arguments.game.length; i++) {
+                        if (nskip > 0) {
+                            nskip--;
+                            continue;
+                        }
+
+                        Object perCustomArg = customVer.arguments.game[i];
+                        if (perCustomArg instanceof String) {
+                            String perCustomArgStr = (String) perCustomArg;
+                            // Check if there is a duplicate argument on combine
+                            if (perCustomArgStr.startsWith("--") && totalArgList.contains(perCustomArgStr)) {
+                                perCustomArg = customVer.arguments.game[i + 1];
+                                if (perCustomArg instanceof String) {
+                                    perCustomArgStr = (String) perCustomArg;
+                                    // If the next is argument value, skip it
+                                    if (!perCustomArgStr.startsWith("--")) {
+                                        nskip++;
+                                    }
+                                }
+                            } else {
+                                totalArgList.add(perCustomArgStr);
+                            }
+                        } else if (!totalArgList.contains(perCustomArg)) {
+                            totalArgList.add(perCustomArg);
+                        }
+                    }
+
+                    inheritsVer.arguments.game = totalArgList.toArray(new Object[0]);
+                }
+
+                customVer = inheritsVer;
+            }
+
+            // LabyMod 4 sets version instead of majorVersion
+            if (customVer.javaVersion != null && customVer.javaVersion.majorVersion == 0) {
+                customVer.javaVersion.majorVersion = customVer.javaVersion.version;
+            }
+            return customVer;
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    // Prevent NullPointerException
+    private static void insertSafety(JMinecraftVersionList.Version targetVer, JMinecraftVersionList.Version fromVer, String... keyArr) {
+        for (String key : keyArr) {
+            Object value = null;
+            try {
+                Field fieldA = fromVer.getClass().getDeclaredField(key);
+                value = fieldA.get(fromVer);
+                if (((value instanceof String) && !((String) value).isEmpty()) || value != null) {
+                    Field fieldB = targetVer.getClass().getDeclaredField(key);
+                    fieldB.set(targetVer, value);
+                }
+            } catch (Throwable th) {
+                Log.w(Tools.APP_NAME, "Unable to insert " + key + "=" + value, th);
+            }
+        }
+    }
+
+    public static String read(InputStream is) throws IOException {
+        String readResult = IOUtils.toString(is, StandardCharsets.UTF_8);
+        is.close();
+        return readResult;
+    }
+
+    public static String read(String path) throws IOException {
+        return read(new FileInputStream(path));
+    }
+
+    public static String read(File path) throws IOException {
+        return read(new FileInputStream(path));
+    }
+
+    public static void write(String path, String content) throws IOException {
+        File file = new File(path);
+        FileUtils.ensureParentDirectory(file);
+        try(FileOutputStream outStream = new FileOutputStream(file)) {
+            IOUtils.write(content, outStream);
+        }
+    }
+
+    public static void downloadFile(String urlInput, String nameOutput) throws IOException {
+        File file = new File(nameOutput);
+        DownloadUtils.downloadFile(urlInput, file);
+    }
+
+    public static boolean isAndroid8OrHigher() {
+        return SDK_INT >= 26;
+    }
+
+    public static void fullyExit() {
+        android.os.Process.killProcess(android.os.Process.myPid());
+    }
+
+    public static void printLauncherInfo(String gameVersion, String javaArguments) {
+        Logger.appendToLog("Info: Launcher version: " + BuildConfig.VERSION_NAME);
+        Logger.appendToLog("Info: Architecture: " + Architecture.archAsString(DEVICE_ARCHITECTURE));
+        Logger.appendToLog("Info: Device model: " + Build.MANUFACTURER + " " +Build.MODEL);
+        Logger.appendToLog("Info: API version: " + SDK_INT);
+        Logger.appendToLog("Info: Selected Minecraft version: " + gameVersion);
+        Logger.appendToLog("Info: Custom Java arguments: \"" + javaArguments + "\"");
+        GLInfoUtils.GLInfo info = GLInfoUtils.getGlInfo();
+        Logger.appendToLog("Info: Graphics device: "+info.vendor+ " "+info.renderer+" (OpenGL ES "+info.glesMajorVersion+")");
+    }
+
+    public interface DownloaderFeedback {
+        void updateProgress(int curr, int max);
+    }
+
+
+    public static boolean compareSHA1(File f, String sourceSHA) {
+        try {
+            String sha1_dst;
+            try (InputStream is = new FileInputStream(f)) {
+                sha1_dst = new String(Hex.encodeHex(org.apache.commons.codec.digest.DigestUtils.sha1(is)));
+            }
+            if(sourceSHA != null) {
+                return sha1_dst.equalsIgnoreCase(sourceSHA);
+            } else{
+                return true; // fake match
+            }
+        }catch (IOException e) {
+            Log.i("SHA1","Fake-matching a hash due to a read error",e);
+            return true;
+        }
+    }
+
+    public static void ignoreNotch(boolean shouldIgnore, Activity ctx){
+        if (SDK_INT >= P) {
+            if (shouldIgnore) {
+                ctx.getWindow().getAttributes().layoutInDisplayCutoutMode = WindowManager.LayoutParams.LAYOUT_IN_DISPLAY_CUTOUT_MODE_SHORT_EDGES;
+            } else {
+                ctx.getWindow().getAttributes().layoutInDisplayCutoutMode = WindowManager.LayoutParams.LAYOUT_IN_DISPLAY_CUTOUT_MODE_NEVER;
+            }
+            ctx.getWindow().setFlags(WindowManager.LayoutParams.FLAG_LAYOUT_IN_SCREEN, WindowManager.LayoutParams.FLAG_LAYOUT_IN_SCREEN);
+            Tools.updateWindowSize(ctx);
+        }
+    }
+
+    public static int getTotalDeviceMemory(Context ctx){
+        ActivityManager actManager = (ActivityManager) ctx.getSystemService(Context.ACTIVITY_SERVICE);
+        ActivityManager.MemoryInfo memInfo = new ActivityManager.MemoryInfo();
+        actManager.getMemoryInfo(memInfo);
+        return (int) (memInfo.totalMem / 1048576L);
+    }
+
+    public static int getFreeDeviceMemory(Context ctx){
+        ActivityManager actManager = (ActivityManager) ctx.getSystemService(Context.ACTIVITY_SERVICE);
+        ActivityManager.MemoryInfo memInfo = new ActivityManager.MemoryInfo();
+        actManager.getMemoryInfo(memInfo);
+        return (int) (memInfo.availMem / 1048576L);
+    }
+
+    private static int internalGetMaxContinuousAddressSpaceSize() throws Exception{
+        MemoryHoleFinder memoryHoleFinder = new MemoryHoleFinder();
+        new SelfMapsParser(memoryHoleFinder).run();
+        long largestHole = memoryHoleFinder.getLargestHole();
+        if(largestHole == -1) return -1;
+        else return (int)(largestHole / 1048576L);
+    }
+
+    public static int getMaxContinuousAddressSpaceSize() {
+        try {
+            return internalGetMaxContinuousAddressSpaceSize();
+        }catch (Exception e){
+            Log.w("Tools", "Failed to find the largest uninterrupted address space");
+            return -1;
+        }
+    }
+
+    public static int getDisplayFriendlyRes(int displaySideRes, float scaling){
+        displaySideRes *= scaling;
+        if(displaySideRes % 2 != 0) displaySideRes --;
+        return displaySideRes;
+    }
+
+    public static String getFileName(Context ctx, Uri uri) {
+        Cursor c = ctx.getContentResolver().query(uri, null, null, null, null);
+        if(c == null) return uri.getLastPathSegment(); // idk myself but it happens on asus file manager
+        c.moveToFirst();
+        int columnIndex = c.getColumnIndex(OpenableColumns.DISPLAY_NAME);
+        if(columnIndex == -1) return uri.getLastPathSegment();
+        String fileName = c.getString(columnIndex);
+        c.close();
+        return fileName;
+    }
+
+    /** Swap the main fragment with another */
+    public static void swapFragment(FragmentActivity fragmentActivity , Class<? extends Fragment> fragmentClass,
+                                    @Nullable String fragmentTag, @Nullable Bundle bundle) {
+        // When people tab out, it might happen
+        //TODO handle custom animations
+        fragmentActivity.getSupportFragmentManager().beginTransaction()
+                .setReorderingAllowed(true)
+                .addToBackStack(fragmentClass.getName())
+                .replace(R.id.container_fragment, fragmentClass, bundle, fragmentTag).commit();
+    }
+
+    public static void backToMainMenu(FragmentActivity fragmentActivity) {
+        fragmentActivity.getSupportFragmentManager()
+                .popBackStack("ROOT", 0);
+    }
+
+    /** Remove the current fragment */
+    public static void removeCurrentFragment(FragmentActivity fragmentActivity){
+        fragmentActivity.getSupportFragmentManager().popBackStack();
+    }
+
+    public static void installMod(Activity activity, boolean customJavaArgs) {
+        if (MultiRTUtils.getExactJreName(8) == null) {
+            Toast.makeText(activity, R.string.multirt_nojava8rt, Toast.LENGTH_LONG).show();
+            return;
+        }
+
+        if(!customJavaArgs){ // Launch the intent to get the jar file
+            if(!(activity instanceof LauncherActivity))
+                throw new IllegalStateException("Cannot start Mod Installer without LauncherActivity");
+            LauncherActivity launcherActivity = (LauncherActivity)activity;
+            launcherActivity.modInstallerLauncher.launch(null);
+            return;
+        }
+
+        // install mods with custom arguments
+        final EditText editText = new EditText(activity);
+        editText.setSingleLine();
+        editText.setHint("-jar/-cp /path/to/file.jar ...");
+
+        AlertDialog.Builder builder = new AlertDialog.Builder(activity)
+                .setTitle(R.string.alerttitle_installmod)
+                .setNegativeButton(android.R.string.cancel, null)
+                .setView(editText)
+                .setPositiveButton(android.R.string.ok, (di, i) -> {
+                    Intent intent = new Intent(activity, JavaGUILauncherActivity.class);
+                    intent.putExtra("javaArgs", editText.getText().toString());
+                    activity.startActivity(intent);
+                });
+        builder.show();
+    }
+
+    /** Display and return a progress dialog, instructing to wait */
+    public static ProgressDialog getWaitingDialog(Context ctx, int message){
+        final ProgressDialog barrier = new ProgressDialog(ctx);
+        barrier.setMessage(ctx.getString(message));
+        barrier.setProgressStyle(ProgressDialog.STYLE_SPINNER);
+        barrier.setCancelable(false);
+        barrier.show();
+
+        return barrier;
+    }
+
+    /** Launch the mod installer activity. The Uri must be from our own content provider or
+     * from ACTION_OPEN_DOCUMENT
+     */
+    public static void launchModInstaller(Activity activity, @NonNull Uri uri){
+        Intent intent = new Intent(activity, JavaGUILauncherActivity.class);
+        intent.putExtra("modUri", uri);
+        activity.startActivity(intent);
+    }
+
+
+    public static void installRuntimeFromUri(Context context, Uri uri){
+        sExecutorService.execute(() -> {
+            try {
+                String name = getFileName(context, uri);
+                MultiRTUtils.installRuntimeNamed(
+                        NATIVE_LIB_DIR,
+                        context.getContentResolver().openInputStream(uri),
+                        name);
+
+                MultiRTUtils.postPrepare(name);
+            } catch (IOException e) {
+                Tools.showError(context, e);
+            }
+        });
+    }
+
+    public static String extractUntilCharacter(String input, String whatFor, char terminator) {
+        int whatForStart = input.indexOf(whatFor);
+        if(whatForStart == -1) return null;
+        whatForStart += whatFor.length();
+        int terminatorIndex = input.indexOf(terminator, whatForStart);
+        if(terminatorIndex == -1) return null;
+        return input.substring(whatForStart, terminatorIndex);
+    }
+
+    public static boolean isValidString(String string) {
+        return string != null && !string.isEmpty();
+    }
+
+    public static String getRuntimeName(String prefixedName) {
+        if(prefixedName == null) return prefixedName;
+        if(!prefixedName.startsWith(Tools.LAUNCHERPROFILES_RTPREFIX)) return null;
+        return prefixedName.substring(Tools.LAUNCHERPROFILES_RTPREFIX.length());
+    }
+
+    public static String getSelectedRuntime(MinecraftProfile minecraftProfile) {
+        String runtime = LauncherPreferences.PREF_DEFAULT_RUNTIME;
+        String profileRuntime = getRuntimeName(minecraftProfile.javaDir);
+        if(profileRuntime != null) {
+            if(MultiRTUtils.forceReread(profileRuntime).versionString != null) {
+                runtime = profileRuntime;
+            }
+        }
+        return runtime;
+    }
+
+    public static void runOnUiThread(Runnable runnable) {
+        MAIN_HANDLER.post(runnable);
+    }
+
+    public static @NonNull String pickRuntime(MinecraftProfile minecraftProfile, int targetJavaVersion) {
+        String runtime = getSelectedRuntime(minecraftProfile);
+        String profileRuntime = getRuntimeName(minecraftProfile.javaDir);
+        Runtime pickedRuntime = MultiRTUtils.read(runtime);
+        if(runtime == null || pickedRuntime.javaVersion == 0 || pickedRuntime.javaVersion < targetJavaVersion) {
+            String preferredRuntime = MultiRTUtils.getNearestJreName(targetJavaVersion);
+            if(preferredRuntime == null) throw new RuntimeException("Failed to autopick runtime!");
+            if(profileRuntime != null) minecraftProfile.javaDir = Tools.LAUNCHERPROFILES_RTPREFIX+preferredRuntime;
+            runtime = preferredRuntime;
+        }
+        return runtime;
+    }
+
+    /** Triggers the share intent chooser, with the latestlog file attached to it */
+    public static void shareLog(Context context){
+        openPath(context, new File(Tools.DIR_GAME_HOME, "latestlog.txt"), true);
+    }
+
+    /**
+     * Determine the MIME type of a File.
+     * @param file The file to determine the type of
+     * @return the type, or the default value *slash* if cannot be determined
+     */
+    public static String getMimeType(File file) {
+        if(file.isDirectory()) return DocumentsContract.Document.MIME_TYPE_DIR;
+        String mimeType = null;
+        try (FileInputStream fileInputStream = new FileInputStream(file)){
+            // Theoretically we don't even need the buffer since we don't care about the
+            // contents of the file after the guess, but mark-supported streams
+            // are a requirement of URLConnection.guessContentTypeFromStream()
+            try(BufferedInputStream bufferedInputStream = new BufferedInputStream(fileInputStream)) {
+                mimeType = URLConnection.guessContentTypeFromStream(bufferedInputStream);
+            }
+        }catch (IOException e) {
+            Log.w("FileMimeType", "Failed to determine MIME type by stream", e);
+        }
+        if(mimeType != null) return mimeType;
+        mimeType = URLConnection.guessContentTypeFromName(file.getName());
+        if(mimeType != null) return mimeType;
+        return "*/*";
+    }
+
+    /**
+     * Open the path specified by a File in a file explorer or in a relevant application.
+     * @param context the current Context
+     * @param file the File to open
+     * @param share whether to open a "Share" or an "Open" dialog.
+     */
+    public static void openPath(Context context, File file, boolean share) {
+        Uri contentUri = DocumentsContract.buildDocumentUri(context.getString(R.string.storageProviderAuthorities), file.getAbsolutePath());
+        String mimeType = getMimeType(file);
+        Intent intent = new Intent();
+        if(share) {
+            intent.setAction(Intent.ACTION_SEND);
+            intent.setType(getMimeType(file));
+            intent.putExtra(Intent.EXTRA_STREAM, contentUri);
+        }else {
+            intent.setAction(Intent.ACTION_VIEW);
+            intent.setDataAndType(contentUri, mimeType);
+        }
+        intent.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION);
+        intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        Intent chooserIntent = Intent.createChooser(intent, file.getName());
+        context.startActivity(chooserIntent);
+    }
+
+    /** Mesure the textview height, given its current parameters */
+    public static int mesureTextviewHeight(TextView t) {
+        int widthMeasureSpec = View.MeasureSpec.makeMeasureSpec(t.getWidth(), View.MeasureSpec.AT_MOST);
+        int heightMeasureSpec = View.MeasureSpec.makeMeasureSpec(0, View.MeasureSpec.UNSPECIFIED);
+        t.measure(widthMeasureSpec, heightMeasureSpec);
+        return t.getMeasuredHeight();
+    }
+
+    /**
+     * Check if the device is one of the devices that may be affected by the hanging linker issue.
+     * The device is affected if the linker causes the process to lock up when dlopen() is called within
+     * dl_iterate_phdr().
+     * For now, the only affected firmware that I know of is Android 5.1, EMUI 3.1 on MTK-based Huawei
+     * devices.
+     * @return if the device is affected by the hanging linker issue.
+     */
+    public static boolean deviceHasHangingLinker() {
+        // Android Oreo and onwards have GSIs and most phone firmwares at that point were not modified
+        // *that* intrusively. So assume that we are not affected.
+        if(SDK_INT >= Build.VERSION_CODES.O) return false;
+        // Since the affected function in LWJGL is rarely used (and when used, it's mainly for debug prints)
+        // we can make the search scope a bit more broad and check if we are running on a Huawei device.
+        return Build.MANUFACTURER.toLowerCase(Locale.ROOT).contains("huawei");
+    }
+
+    public static class RenderersList {
+        public final List<String> rendererIds;
+        public final String[] rendererDisplayNames;
+
+        public RenderersList(List<String> rendererIds, String[] rendererDisplayNames) {
+            this.rendererIds = rendererIds;
+            this.rendererDisplayNames = rendererDisplayNames;
+        }
+    }
+
+    public static boolean checkVulkanSupport(PackageManager packageManager) {
+        if(SDK_INT >= Build.VERSION_CODES.N) {
+            return packageManager.hasSystemFeature(PackageManager.FEATURE_VULKAN_HARDWARE_LEVEL) &&
+                    packageManager.hasSystemFeature(PackageManager.FEATURE_VULKAN_HARDWARE_VERSION);
+        }
+        return false;
+    }
+
+    public static <T> T getWeakReference(WeakReference<T> weakReference) {
+        if(weakReference == null) return null;
+        return weakReference.get();
+    }
+
+    /** Return the renderers that are compatible with this device */
+    public static RenderersList getCompatibleRenderers(Context context) {
+        if(sCompatibleRenderers != null) return sCompatibleRenderers;
+        Resources resources = context.getResources();
+        String[] defaultRenderers = resources.getStringArray(R.array.renderer_values);
+        String[] defaultRendererNames = resources.getStringArray(R.array.renderer);
+        boolean deviceHasVulkan = checkVulkanSupport(context.getPackageManager());
+        // Currently, only 32-bit x86 does not have the Zink binary
+        boolean deviceHasZinkBinary = !(Architecture.is32BitsDevice() && Architecture.isx86Device());
+        boolean deviceHasOpenGLES3 = JREUtils.getDetectedVersion() >= 3;
+        // LTW is an optional proprietary dependency
+        boolean appHasLtw = new File(Tools.NATIVE_LIB_DIR, "libltw.so").exists();
+        List<String> rendererIds = new ArrayList<>(defaultRenderers.length);
+        List<String> rendererNames = new ArrayList<>(defaultRendererNames.length);
+        for(int i = 0; i < defaultRenderers.length; i++) {
+            String rendererId = defaultRenderers[i];
+            if(rendererId.contains("vulkan") && !deviceHasVulkan) continue;
+            if(rendererId.contains("zink") && !deviceHasZinkBinary) continue;
+            if(rendererId.contains("ltw") && (!deviceHasOpenGLES3 || !appHasLtw)) continue;
+            rendererIds.add(rendererId);
+            rendererNames.add(defaultRendererNames[i]);
+        }
+        sCompatibleRenderers = new RenderersList(rendererIds,
+                rendererNames.toArray(new String[0]));
+
+        return sCompatibleRenderers;
+    }
+
+    /** Checks if the renderer Id is compatible with the current device */
+    public static boolean checkRendererCompatible(Context context, String rendererName) {
+         return getCompatibleRenderers(context).rendererIds.contains(rendererName);
+    }
+
+    /** Releases the cache of compatible renderers. */
+    public static void releaseRenderersCache() {
+        sCompatibleRenderers = null;
+        System.gc();
+    }
+
+    public static boolean deviceSupportsGyro(@NonNull Context context) {
+        return ((SensorManager)context.getSystemService(Context.SENSOR_SERVICE)).getDefaultSensor(Sensor.TYPE_GYROSCOPE) != null;
+
+    }
+
+    public static void dialogForceClose(Context ctx) {
+        new android.app.AlertDialog.Builder(ctx)
+                .setMessage(R.string.mcn_exit_confirm)
+                .setNegativeButton(android.R.string.cancel, null)
+                .setPositiveButton(android.R.string.ok, (p1, p2) -> {
+                    try {
+                        Tools.fullyExit();
+                    } catch (Throwable th) {
+                        Log.w(Tools.APP_NAME, "Could not enable System.exit() method!", th);
+                    }
+                }).show();
     }
 }
